// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CenterCards /> should render correctly if it is a normal user 1`] = `
<div
  className="col-lg-4 col-md-6 col-sm-12"
>
  <div
    className="card"
  >
    <div>
      <img
        alt=""
        className="card-img-top"
        src="http://testImage.jpg"
      />
      <span
        className="badge text-white p-2 seat-badge "
      >
        200
         seats
      </span>
    </div>
    <div
      className="card-body d-flex flex-column"
    >
      <div>
        <h4
          className="card-title text-capitalize"
        >
          test-center1
        </h4>
        <i
          aria-hidden="true"
          className="fa fa-map-marker fa-fw"
        />
         
        <span
          className="text-capitalize"
        >
          test-center-location
        </span>
      </div>
      <button
        className="btn text-white mt-3"
        data-target="#center-details-modal"
        data-toggle="modal"
        id={1}
        onClick={[Function]}
      >
        Details
      </button>
    </div>
  </div>
</div>
`;

exports[`<CenterCards /> should render correctly if it is an admin user 1`] = `
<div
  className="col-lg-4 col-md-6 col-sm-12"
>
  <div
    className="card"
  >
    <div>
      <img
        alt=""
        className="card-img-top"
        src="http://testImage.jpg"
      />
      <span
        className="badge text-white p-2 seat-badge "
      >
        200
         seats
      </span>
    </div>
    <div
      className="card-body d-flex flex-column"
    >
      <div>
        <h4
          className="card-title text-capitalize"
        >
          test-center1
        </h4>
        <i
          aria-hidden="true"
          className="fa fa-map-marker fa-fw"
        />
         
        <span
          className="text-capitalize"
        >
          test-center-location
        </span>
      </div>
      <a
        class="btn text-white mt-3"
        href="/editCenter"
        id={1}
        onClick={[Function]}
      >
        Edit
      </a>
    </div>
  </div>
</div>
`;

exports[`<CenterCards /> should render with the default image if no image was passed in 1`] = `
<div
  className="col-lg-4 col-md-6 col-sm-12"
>
  <div
    className="card"
  >
    <div>
      <img
        alt=""
        className="card-img-top"
        src="/images/defaultImgx4.jpeg"
      />
      <span
        className="badge text-white p-2 seat-badge "
      >
        200
         seats
      </span>
    </div>
    <div
      className="card-body d-flex flex-column"
    >
      <div>
        <h4
          className="card-title text-capitalize"
        >
          test-center1
        </h4>
        <i
          aria-hidden="true"
          className="fa fa-map-marker fa-fw"
        />
         
        <span
          className="text-capitalize"
        >
          test-center-location
        </span>
      </div>
      <button
        className="btn text-white mt-3"
        data-target="#center-details-modal"
        data-toggle="modal"
        id={1}
        onClick={[Function]}
      >
        Details
      </button>
    </div>
  </div>
</div>
`;
